Update PostsService and PostsComponent to use 'error' instead of 'isError' property

--- a/src/app/stand-alone-components/posts/posts.component.html
+++ b/src/app/stand-alone-components/posts/posts.component.html
@@ -20,8 +20,8 @@
   }
 
   <!-- Is Error -->
-  @if(isError()){
-  <div class="error">Error: {{ postsService.state.error() }}</div>
+  @if(error()){
+  <div class="error">Error: {{ error() }}</div>
   }
 
   <mat-table [dataSource]="dataSource">
