--- a/src/app/stand-alone-components/posts/posts.component.scss
+++ b/src/app/stand-alone-components/posts/posts.component.scss
@@ -1,16 +1,87 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
-  .actions {
-    display: inherit;
-    gap: 1rem;
-    justify-content: center;
-  }
+  padding: 20px;
 
   .header-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
+
+    .title {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .show-state-button {
+      margin-left: 10px;
+    }
+  }
+
+  .state-container {
+    margin-bottom: 20px;
+
+    .state-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .state-pre {
+      background-color: #f5f5f5;
+      padding: 10px;
+      border-radius: 4px;
+    }
+  }
+
+  .loading-spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .error {
+    color: red;
+    margin-bottom: 20px;
+  }
+
+  .mat-table {
+    width: 100%;
+
+    .header-cell {
+      font-weight: bold;
+    }
+
+    .cell {
+      padding: 10px;
+    }
+
+    .comments {
+      white-space: pre-wrap;
+    }
+
+    .action-button {
+      margin-right: 5px;
+    }
+  }
+
+  .paginator {
+    margin-top: 2px;
+  }
+
+  button {
+    margin-right: 6px;
+  }
+
+  .actions {
+    margin-top: 20px;
+    gap: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    .load-posts-button,
+    .add-post-button {
+      padding: 10px 20px;
+    }
   }
 }
