refactor: Update PostsComponent to use CommentDisplayComponent for displaying comments

--- a/src/app/stand-alone-components/comment-display/comment-display.component.html
+++ b/src/app/stand-alone-components/comment-display/comment-display.component.html
@@ -2,14 +2,22 @@
 <div class="comment">
   <div>Comment {{ $index + 1 }}:</div>
   <div>Name: {{ comment.name }}</div>
-  <div>Email: {{ comment.body }}</div>
   <div>Email: {{ comment.email }}</div>
+  <div>Body: {{ comment.body }}</div>
   <div>Post Id: {{ comment.postId }}</div>
-  <!-- <button mat-mini-fab color="primary" (click)="onUpdateComment(comment.id)">
+  <button
+    mat-mini-fab
+    color="primary"
+    (click)="onUpdateComment(comment.postId, comment)"
+  >
     <mat-icon>edit</mat-icon>
   </button>
-  <button mat-mini-fab color="warn" (click)="onRemoveComment(comment.id)">
+  <button
+    mat-mini-fab
+    color="warn"
+    (click)="onRemoveComment(comment.postId, comment.id)"
+  >
     <mat-icon>delete</mat-icon>
-  </button> -->
+  </button>
 </div>
 }
