refactor: Update title in PostsComponent to "Posts Table Using Signal State"

--- a/src/app/stand-alone-components/posts/posts.component.html
+++ b/src/app/stand-alone-components/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header-container">
-    <h1 class="title">Posts Example Using Signal State</h1>
+    <h1 class="title">Posts Table Using Signal State</h1>
     <div class="actions">
       <button
         mat-raised-button
