refactor: Update comment display in CommentDisplayComponent

--- a/src/app/stand-alone-components/comment-display/comment-display.component.html
+++ b/src/app/stand-alone-components/comment-display/comment-display.component.html
@@ -1,3 +1,8 @@
+@if (!comments().length) {
+<strong>No comments found.</strong>
+}
+
+<!-- Comments Section  -->
 @for (comment of comments(); track $index) {
 <mat-card>
   <div><strong>Comment:</strong> {{ $index + 1 }}:</div>
@@ -22,6 +27,4 @@
     </button>
   </div>
 </mat-card>
-} @if (!comments().length) {
-<strong>No comments found.</strong>
 }
