--- a/src/app/stand-alone-components/comment-form-dialog/comment-form-dialog.component.html
+++ b/src/app/stand-alone-components/comment-form-dialog/comment-form-dialog.component.html
@@ -26,6 +26,8 @@
     <mat-error>Comment is required</mat-error>
     }
   </mat-form-field>
+
+  <!-- Actions Section -->
   <div mat-dialog-actions>
     <button mat-button (click)="onCancel()">Cancel</button>
     <button
