refactor: Update posts form dialog component to fix title display issue

--- a/src/app/stand-alone-components/posts-form-dialog/posts-form-dialog.component.html
+++ b/src/app/stand-alone-components/posts-form-dialog/posts-form-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="postForm">
-  <h2 mat-dialog-title>{{ data.post ? "Edit Post" : "Add Post" }}</h2>
+  <h2 mat-dialog-title>{{ data ? "Edit Post" : "Add Post" }}</h2>
 
   <!-- Title Field -->
   <mat-form-field appearance="fill">
