--- a/src/app/stand-alone-components/posts/posts.component.html
+++ b/src/app/stand-alone-components/posts/posts.component.html
@@ -148,7 +148,7 @@
           mat-mini-fab
           color="warn"
           class="action-button delete-button"
-          matTooltip="Delete post"
+          matTooltip="Remove post"
           matTooltipPosition="above"
           (click)="deletePost(post.id)"
         >
