refactor: Update comment and post form dialog components for improved user experience

--- a/src/app/stand-alone-components/comment-components/comment-display/comment-display.component.html
+++ b/src/app/stand-alone-components/comment-components/comment-display/comment-display.component.html
@@ -1,5 +1,5 @@
 @if (!comments().length) {
-<strong>No comments found.</strong>
+<strong>Currently no comments.</strong>
 }
 
 <!-- Comments Section  -->
