refactor: Update comment and post form dialog components for improved user experience

--- a/src/app/stand-alone-components/comment-components/comment-display/comment-display.component.html
+++ b/src/app/stand-alone-components/comment-components/comment-display/comment-display.component.html
@@ -13,7 +13,7 @@
     <button
       mat-mini-fab
       color="primary"
-      matTooltip="Update post"
+      matTooltip="Update comment"
       matTooltipPosition="above"
       (click)="onUpdateComment(comment.postId, comment)"
     >
@@ -22,7 +22,7 @@
     <button
       mat-mini-fab
       color="warn"
-      matTooltip="Remove post"
+      matTooltip="Remove comment"
       matTooltipPosition="above"
       (click)="onRemoveComment(comment.postId, comment.id)"
     >
