refactor: Update error message in posts component HTML template

--- a/src/app/stand-alone-components/post-components/posts/posts.component.html
+++ b/src/app/stand-alone-components/post-components/posts/posts.component.html
@@ -46,7 +46,7 @@
 
   <!-- Is Error -->
   @if(error()){
-  <div class="error">Error: {{ error() }}</div>
+  <div class="error">An Error Occured: {{ error() | json }}</div>
   }
 
   <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
