refactor: Update error handling in posts component and service

--- a/src/app/stand-alone-components/post-components/posts/posts.component.html
+++ b/src/app/stand-alone-components/post-components/posts/posts.component.html
@@ -45,8 +45,8 @@
   }
 
   <!-- Is Error -->
-  @if(error()){
-  <div class="error">An Error Occured: {{ error() | json }}</div>
+  @if(isError()){
+  <div class="error">An Error Occured: {{ isError() | json }}</div>
   }
 
   <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
