--- a/src/app/stand-alone-components/post-components/posts-form-dialog/posts-form-dialog.component.html
+++ b/src/app/stand-alone-components/post-components/posts-form-dialog/posts-form-dialog.component.html
@@ -39,7 +39,7 @@
 
   <!-- Actions Section -->
   <div mat-dialog-actions>
-    <button mat-stroked-button (click)="onCancel()">Cancel</button>
+    <button mat-stroked-button (click)="onCancel()" color="warn">Cancel</button>
     <button
       mat-raised-button
       color="primary"
